<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IHearYou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lesson">學習</string>
    <string name="lesson_progress">練習進度</string>
    <string name="basic">Basic - %d</string>
    <string name="intermediate">Intermediate - %d</string>
    <string name="advance">Advance - %d</string>
    <string name="questionType">Question Type</string>
    <string name="questionDesc">Listen to the sounds clip, Selected the correct answer
        from four options</string>
    <string name="startLesson">Start Lesson</string>
    <string name="questionTitle">題目 %d</string>
    <string name="questionDetail">點選播放鍵並仔細聆聽內容</string>
    <string name="questionDetailRecord">點選錄音鍵並說出上方詞句</string>
    <string name="questionDetailDialogue">聆聽對話並選擇正確的內容</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="Confirm">Confirm</string>
    <string name="wave_form">Wave form</string>
    <string name="practice">practice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_alarm">提醒</string>
    <string name="title_activity_add_check">提醒</string>
    <string name="title_activity_add_ticket">提醒</string>
    <string name="title_activity_voice_recognizer">VoiceRecognizerActivity</string>
    <string name="title_interpreters">Interpreter</string>
    <string name="title_video_recording">Video</string>
    <string name="title_phone_calls">Phone</string>
    <string name="start_conversation">start conversation</string>
    <string name="end_conversation">end conversation</string>
    <string name="pronounce">子母音練習</string>
    <string name="oral">口說練習</string>
    <string name="dialogue">對話練習</string>

</resources>
