<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="10dp"
        android:text="@string/lesson_progress"
        android:id="@+id/textView" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/pronounce"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/progress_pronounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textSize="20sp"
                android:text="47%"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_pronounce"
                android:background="@drawable/learn_line_1"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress_pronounce"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                android:text="@string/pronounce"/>
            </RelativeLayout>
        <ImageView
            android:id="@id/progress_circular"
            android:layout_width="138dp"
            android:layout_height="138dp"
            android:background="@drawable/learn_circle"
            android:layout_toRightOf="@+id/dialogue"
            android:layout_below="@+id/pronounce"
            android:layout_marginLeft="10dp"
            />

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/oral"
            android:layout_below="@id/progress_circular"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/oral_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_alignBottom="@+id/line2"
                android:text="100%"/>
            <ImageView
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/learn_line_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oral_progress"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"
                android:textSize="12sp"
                android:text="@string/oral"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dialogue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/oral"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
>
            <TextView
                android:id="@+id/dialogue_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@+id/line3"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:text="55%"/>
            <ImageView
                android:id="@+id/line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/learn_line_3"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line3"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:textSize="12sp"
                android:text="@string/dialogue" />
        </RelativeLayout>

    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/oral_view">
            <ImageView
                android:id="@+id/pronounce_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="center"
                android:layout_centerInParent="true"
                android:background="@drawable/sel_btn_pronounce"/>
            <TextView
                android:id="@+id/pronounce_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oral"
                android:layout_below="@+id/pronounce_icon"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true" />
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/pronounce_view">
            <ImageView
                android:id="@+id/oral_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="center"
                android:layout_centerInParent="true"
                android:background="@drawable/sel_btn_oral"/>
            <TextView
                android:id="@+id/oral_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pronounce"
                android:layout_below="@+id/oral_icon"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/dialogue_view">
            <ImageView
                android:id="@+id/dialogue_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:scaleType="center"
                android:background="@drawable/sel_btn_dialogue"/>
            <TextView
                android:id="@+id/dialogue_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogue"
                android:layout_below="@+id/dialogue_icon"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lesson_list"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>
</LinearLayout>
